feat(auth): add password reset functionality with email verification, including endpoints for requesting and resetting passwords, and corresponding DTOs and email templates

--- a/src/i18n/ar/auth.json
+++ b/src/i18n/ar/auth.json
@@ -13,5 +13,7 @@
   "email_not_verified": "البريد الإلكتروني غير محقق. يرجى التحقق من بريدك الإلكتروني أولاً",
   "account_deactivated": "الحساب معطل",
   "login_successful": "تم تسجيل الدخول بنجاح",
-  "user_profile_retrieved": "تم استرجاع الملف الشخصي بنجاح"
+  "user_profile_retrieved": "تم استرجاع الملف الشخصي بنجاح",
+  "password_reset_code_sent": "تم إرسال رمز إعادة تعيين كلمة المرور بنجاح. يرجى التحقق من بريدك الإلكتروني",
+  "password_reset_successful": "تم إعادة تعيين كلمة المرور بنجاح. يمكنك الآن تسجيل الدخول بكلمة المرور الجديدة"
 }
