--- a/src/i18n/en/auth.json
+++ b/src/i18n/en/auth.json
@@ -13,5 +13,7 @@
   "email_not_verified": "Email not verified. Please verify your email first",
   "account_deactivated": "Account is deactivated",
   "login_successful": "Login successful",
-  "user_profile_retrieved": "User profile retrieved successfully"
+  "user_profile_retrieved": "User profile retrieved successfully",
+  "password_reset_code_sent": "Password reset code sent successfully. Please check your email",
+  "password_reset_successful": "Password reset successful. You can now login with your new password"
 }
