feat(auth): add OTP verification for password reset process, including new endpoint, DTOs, and response handling

--- a/src/i18n/ar/auth.json
+++ b/src/i18n/ar/auth.json
@@ -15,5 +15,6 @@
   "login_successful": "تم تسجيل الدخول بنجاح",
   "user_profile_retrieved": "تم استرجاع الملف الشخصي بنجاح",
   "password_reset_code_sent": "تم إرسال رمز إعادة تعيين كلمة المرور بنجاح. يرجى التحقق من بريدك الإلكتروني",
+  "otp_verified_successfully": "تم التحقق من رمز التحقق بنجاح. يمكنك الآن إعادة تعيين كلمة المرور",
   "password_reset_successful": "تم إعادة تعيين كلمة المرور بنجاح. يمكنك الآن تسجيل الدخول بكلمة المرور الجديدة"
 }
