--- a/src/i18n/en/auth.json
+++ b/src/i18n/en/auth.json
@@ -15,5 +15,6 @@
   "login_successful": "Login successful",
   "user_profile_retrieved": "User profile retrieved successfully",
   "password_reset_code_sent": "Password reset code sent successfully. Please check your email",
+  "otp_verified_successfully": "OTP verified successfully. You can now reset your password",
   "password_reset_successful": "Password reset successful. You can now login with your new password"
 }
